fix: Use virtual threads for parallel query execution
Replace newFixedThreadPool with newVirtualThreadPerTaskExecutor to
eliminate thread pool overhead. Virtual threads (Java 21+) are
lightweight and don't require pooling.

Benefits:
- No thread creation/destruction overhead per query
- Automatic cleanup via try-with-resources
- Better scalability under high query load

Closes PJDBC-0oje

🤖 Generated with [Claude Code](https://claude.com/claude-code)

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>